nginx.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
spec:
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - image: nginx
        name: nginx
        ports:
        - containerPort: 80
---
# apiVersion: v1
# kind: Service
# metadata:
#   name: nginx
#   annotations:
#     external-dns.alpha.kubernetes.io/hostname: nginx.moabukar.co.uk
#     external-dns.alpha.kubernetes.io/ttl: "120" #optional
# spec:
#   selector:
#     app: nginx
#   type: LoadBalancer
#   ports:
#   - protocol: TCP
#     port: 80
#     targetPort: 80

apiVersion: v1
kind: Service
metadata:
  name: nginx
  # annotations:
  #   external-dns.alpha.kubernetes.io/hostname: nginx.moabukar.co.uk
  #   external-dns.alpha.kubernetes.io/ttl: "120" #optional
spec:
  selector:
    app: nginx
  type: ClusterIP
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
